--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,18 @@
 name = "Diban"
 uuid = "a46aeeba-2081-4047-a12e-9fb5f650f4fd"
-authors = ["xiaodaigh <zhuojia.dai@gmail.com>"]
+authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
 version = "0.1.0"
 
 [deps]
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LittleEndianBase128 = "1724a1d5-ab78-548d-94b3-135c294f96cf"
+MemPool = "f9f48841-c794-520a-933b-121f7ba6ed94"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
-Parquet = "626c502c-15b0-58ad-a749-f091afb673ae"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Snappy = "59d4ed8c-697a-5b28-a4c7-fe95c22820f9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Thrift = "8d9c9c80-f77e-5080-9541-c6f69d204e22"
@@ -23,4 +25,4 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "DataFrames"]
