--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
